--- a/page.codeberg.sungsphinx.Dog.json
+++ b/page.codeberg.sungsphinx.Dog.json
@@ -30,7 +30,7 @@
             "sources" : [
                 {
                     "type" : "git",
-                    "url" : "file:///home/user/GBuilder-Projects"
+                    "url" : "https://codeberg.org/sungsphinx/Dog.git"
                 }
             ]
         }
