--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,5 @@
 project('dog', 'c',
+          license: 'GPL3+',
           version: '0.1.0',
     meson_version: '>= 0.62.0',
   default_options: [ 'warning_level=2', 'werror=false', 'c_std=gnu11', ],
