--- a/page.codeberg.sungsphinx.Dog.json
+++ b/page.codeberg.sungsphinx.Dog.json
@@ -4,6 +4,7 @@
     "runtime-version" : "44",
     "sdk" : "org.gnome.Sdk",
     "command" : "dog",
+    "tags": ["GTK Nightly"],
     "finish-args" : [
         "--share=ipc",
         "--socket=fallback-x11",
