--- a/page.codeberg.sungsphinx.DogGTK.json
+++ b/page.codeberg.sungsphinx.DogGTK.json
@@ -30,8 +30,7 @@
             "sources" : [
                 {
                     "type" : "git",
-                    "url" : "https://codeberg.org/sungsphinx/DogGTK.git",
-                    "branch": "main"
+                    "url" : "https://codeberg.org/sungsphinx/DogGTK.git"
                 }
             ]
         }
