--- a/page.codeberg.sungsphinx.DogGTK.json
+++ b/page.codeberg.sungsphinx.DogGTK.json
@@ -4,7 +4,8 @@
     "runtime-version" : "44",
     "sdk" : "org.gnome.Sdk",
     "command" : "dog",
-    "tags": ["GTK Nightly"],
+    "tags": ["nightly"],
+    "desktop-file-name-suffix": " (Nightly DogGTK)",
     "finish-args" : [
         "--share=ipc",
         "--socket=fallback-x11",
