--- a/page.codeberg.sungsphinx.DogGTK.json
+++ b/page.codeberg.sungsphinx.DogGTK.json
@@ -4,8 +4,7 @@
     "runtime-version" : "44",
     "sdk" : "org.gnome.Sdk",
     "command" : "dog",
-    "tags": ["nightly"],
-    "desktop-file-name-suffix": " (Nightly DogGTK)",
+    "tags": ["devel"],
     "finish-args" : [
         "--share=ipc",
         "--socket=fallback-x11",
