No Rust codebase

--- a/data/page.codeberg.SOrg.DogGTK.metainfo.xml.in
+++ b/data/page.codeberg.SOrg.DogGTK.metainfo.xml.in
@@ -22,17 +22,14 @@
 	<releases>
 		<release version="1.0.0" date="2023-11-14" type="stable">
 		<h2>This marks the 1st (and maybe only) release of this totally not useless "app" (sarcasm for people who don't get jokes)</h2>
+		<h3>(Rust codebase has been reverted, I (sungsphinx) suck at rust coding)
 		<h2>Some features/changes are:</h2>
 		<ul>
-		<li>A Rust codebase</li>
 		<li>A new app icon</li>
 		<li>...uhh uhhmmmm uh what else...</li>
 		<li>More family friendly: The abandon button no longer has a middle finger as an icon (it is now a ghost)</li>
 		</ul>
 		</release>
 	</releases>
-	<provides>
-	  <binary>doggtk</binary>
-	</provides>
 	<content_rating type="oars-1.1" />
 </component>
