--- a/data/meson.build
+++ b/data/meson.build
@@ -4,7 +4,7 @@ desktop_file = i18n.merge_file(
          type: 'desktop',
        po_dir: '../po',
       install: true,
-  install_dir: get_option('datadir') / 'applications'
+  install_dir: join_paths(get_option('datadir'), 'applications')
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
@@ -13,24 +13,27 @@ if desktop_utils.found()
 endif
 
 appstream_file = i18n.merge_file(
-        input: 'page.codeberg.SOrg.DogGTK.metainfo.xml.in',
-       output: 'page.codeberg.SOrg.DogGTK.metainfo.xml',
+        input: 'page.codeberg.SOrg.DogGTK.appdata.xml.in',
+       output: 'page.codeberg.SOrg.DogGTK.appdata.xml',
        po_dir: '../po',
       install: true,
-  install_dir: get_option('datadir') / 'metainfo'
+  install_dir: join_paths(get_option('datadir'), 'appdata')
 )
 
-appstreamcli = find_program('appstreamcli', required: false, disabler: true)
-test('Validate appstream file', appstreamcli,
-     args: ['validate', '--no-net', '--explain', appstream_file])
+appstream_util = find_program('appstream-util', required: false)
+if appstream_util.found()
+  test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
+endif
 
 install_data('page.codeberg.SOrg.DogGTK.gschema.xml',
-  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
+  install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
 )
 
-compile_schemas = find_program('glib-compile-schemas', required: false, disabler: true)
-test('Validate schema file',
-     compile_schemas,
-     args: ['--strict', '--dry-run', meson.current_source_dir()])
+compile_schemas = find_program('glib-compile-schemas', required: false)
+if compile_schemas.found()
+  test('Validate schema file',
+       compile_schemas,
+       args: ['--strict', '--dry-run', meson.current_source_dir()])
+endif
 
 subdir('icons')
