--- a/data/page.codeberg.SOrg.DogGTK.desktop.in
+++ b/data/page.codeberg.SOrg.DogGTK.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Dog (GTK)
 Comment=A GTK4 + Libadwaita minimal, silly and useless demo... with a dog.
-Exec=doggtk
+Exec=dog
 Icon=page.codeberg.SOrg.DogGTK
 Terminal=false
 Type=Application
