--- a/meson.build
+++ b/meson.build
@@ -9,10 +9,29 @@ i18n = import('i18n')
 gnome = import('gnome')
 cc = meson.get_compiler('c')
 
+profile = get_option('profile')
+if profile == 'development'
+  find_program('git')
+  rev_txt = run_command('git','rev-parse','--short','HEAD').stdout().strip()
+  name_suffix = ' (Development)'
+  rev = '-@0@'.format(rev_txt)
+  application_id = 'page.codeberg.SOrg.DogGTK.Devel'
+else
+  name_suffix = ''
+  rev = ''
+  application_id = 'page.codeberg.SOrg.DogGTK'
+endif
+
 config_h = configuration_data()
+config_h.set_quoted('APPLICATION_ID', application_id)
 config_h.set_quoted('PACKAGE_VERSION', meson.project_version())
 config_h.set_quoted('GETTEXT_PACKAGE', 'dog')
 config_h.set_quoted('LOCALEDIR', join_paths(get_option('prefix'), get_option('localedir')))
+config_h.set_quoted('PROFILE', profile)
+configure_file(
+  output: 'dog-config.h',
+  configuration: config_h,
+)
 configure_file(output: 'config.h', configuration: config_h)
 add_project_arguments(['-I' + meson.project_build_root()], language: 'c')
 
@@ -85,6 +104,10 @@ add_project_arguments(project_c_args, language: 'c')
 subdir('data')
 subdir('src')
 subdir('po')
+
+summary({
+  'Profile': get_option('profile'),
+}, section: 'Development')
 
 gnome.post_install(
      glib_compile_schemas: true,
