--- a/data/meson.build
+++ b/data/meson.build
@@ -1,5 +1,8 @@
 desktop_file = i18n.merge_file(
-          input: files('page.codeberg.SOrg.DogGTK.desktop.in'),
+          input: configure_file(
+            input: files('page.codeberg.SOrg.DogGTK.desktop.in.in'),
+            output: 'page.codeberg.SOrg.DogGTK.desktop.in',
+          ),
           output: '@0@.desktop'.format(application_id),
          type: 'desktop',
        po_dir: '../po',
@@ -19,7 +22,11 @@ endif
 appdata_conf = configuration_data()
 appdata_conf.set('appid', application_id)
 appstream_file = i18n.merge_file(
-        input: files('page.codeberg.SOrg.DogGTK.appdata.in'),
+        input: configure_file(
+          input: files('page.codeberg.SOrg.DogGTK.appdata.xml.in.in'),
+          output: 'page.codeberg.SOrg.DogGTK.appdata.xml.in',
+          configuration: appdata_conf
+        ),
         output: '@0@.appdata.xml'.format(application_id),
        po_dir: '../po',
       install: true,
