doggo: Upload Files

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,3 +1,27 @@
+subdir('icons')
+
+blueprints = custom_target('blueprints',
+  input: files(
+    'ui/window.blp',
+    'ui/shortcuts.blp',
+  ),
+  output: '.',
+  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
+)
+
+resources_conf = configuration_data()
+resources_conf.set('appid', application_id)
+
+resources = gnome.compile_resources(
+  'dog',
+  configure_file(
+    input: 'dog.gresource.xml.in',
+    output: 'dog.gresource.xml',
+    configuration: resources_conf,
+  ),
+  dependencies: blueprints,
+)
+
 desktop_conf = configuration_data()
 desktop_conf.set('appid', application_id)
 desktop_file = i18n.merge_file(
@@ -18,18 +42,18 @@ if desktop_utils.found()
   test('Validate desktop file', desktop_utils, args: [desktop_file])
 endif
 
-appdata_conf = configuration_data()
-appdata_conf.set('appid', application_id)
+appstream_conf = configuration_data()
+appstream_conf.set('appid', application_id)
 appstream_file = i18n.merge_file(
         input: configure_file(
-          input: files('page.codeberg.SOrg.DogGTK.appdata.xml.in.in'),
-          output: 'page.codeberg.SOrg.DogGTK.appdata.xml.in',
-          configuration: appdata_conf
+          input: files('page.codeberg.SOrg.DogGTK.metainfo.xml.in.in'),
+          output: 'page.codeberg.SOrg.DogGTK.metainfo.xml.in',
+          configuration: appstream_conf,
         ),
-        output: '@0@.appdata.xml'.format(application_id),
+        output: '@0@.metainfo.xml'.format(application_id),
        po_dir: '../po',
       install: true,
-  install_dir: get_option('datadir') / 'appdata',
+  install_dir: get_option('datadir') / 'metainfo',
 )
 
 appstreamcli = find_program('appstreamcli', required: false)
@@ -47,5 +71,3 @@ if compile_schemas.found()
        compile_schemas,
        args: ['--strict', '--dry-run', meson.current_source_dir()])
 endif
-
-subdir('icons')
