--- a/data/page.codeberg.SOrg.DogGTK.metainfo.xml.in.in
+++ b/data/page.codeberg.SOrg.DogGTK.metainfo.xml.in.in
@@ -25,6 +25,15 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="3.1" date="2023-12-13" type="stable">
+      <url>https://codeberg.org/SOrg/Doggo/releases/tag/3.0</url>
+      <description>
+        <ul>
+          <li>Updated App Icon (Slightly Noticable)</li>
+          <li>Added a new result from giving the doggo food</li>
+        </ul>
+      </description>
+    </release>
     <release version="3.0" date="2023-12-10" type="stable">
       <url>https://codeberg.org/SOrg/Doggo/releases/tag/3.0</url>
       <description>
