--- a/data/dog.gresource.xml.in
+++ b/data/dog.gresource.xml.in
@@ -7,6 +7,8 @@
     <file alias="bjrunoada.jpg">ui/images/bjrunoada.jpg</file>
     <file alias="style.css">ui/style.css</file>
     <file alias="icons/dog.svg" preprocess="xml-stripblanks">ui/icons/dog.svg</file>
+    <file alias="icons/dog-neutral.svg" preprocess="xml-stripblanks">ui/icons/dog-neutral.svg</file>
+    <file alias="icons/dog-affectionate.svg" preprocess="xml-stripblanks">ui/icons/dog-affectionate.svg</file>
     <file alias="icons/dog-angry.svg" preprocess="xml-stripblanks">ui/icons/dog-angry.svg</file>
     <file alias="icons/dog-scared.svg" preprocess="xml-stripblanks">ui/icons/dog-scared.svg</file>
     <file alias="icons/dog-dead.svg" preprocess="xml-stripblanks">ui/icons/dog-dead.svg</file>
