--- a/.gitea/PULL_REQUEST_TEMPLATE.yml
+++ b/.gitea/PULL_REQUEST_TEMPLATE.yml
@@ -12,7 +12,7 @@ body:
   - type: textarea
     id: what-changed
     attributes:
-      label: What was added?
-      description: What has this PR added to Doggo?
+      label: What has been added/changed?
+      description: What has this PR added/changed in Doggo?
     validations:
       required: true
