--- a/.gitea/PULL_REQUEST_TEMPLATE.yml
+++ b/.gitea/PULL_REQUEST_TEMPLATE.yml
@@ -7,7 +7,7 @@ body:
       label: Requirements
       description: Please make sure these requirements are met.
       options:
-        - label: I have tested this locally
+        - label: I have tested this PR and made sure nothing noticable breaks.
           required: true
   - type: textarea
     id: what-changed
