--- a/.gitea/PULL_REQUEST_TEMPLATE.yml
+++ b/.gitea/PULL_REQUEST_TEMPLATE.yml
@@ -7,7 +7,7 @@ body:
       label: Requirements
       description: Please make sure these requirements are met.
       options:
-        - label: I have tested this PR and made sure nothing noticable breaks. (If a WIP, check this box anyway and only unmark as WIP when tested.)
+        - label: I have tested this PR and made sure nothing noticable breaks. (If marked as WIP, check this box anyway and only unmark as WIP when tested.)
           required: true
   - type: textarea
     id: what-changed
