app: fix child window app ids
app: fix child window app ids
readme: change issue url
metainfo: change issue url

--- a/data/page.codeberg.SOrg.DogGTK.metainfo.xml.in.in
+++ b/data/page.codeberg.SOrg.DogGTK.metainfo.xml.in.in
@@ -114,7 +114,7 @@ New features &amp; changes below:</p>
     </release>
   </releases>
   <url type="homepage">https://sorg.codeberg.page/Doggo</url>
-  <url type="bugtracker">https://codeberg.org/SOrg/Doggo/issues</url>
+  <url type="bugtracker">https://codeberg.org/SOrg/Doggo/issues/new/choose</url>
   <url type="vcs-browser">https://codeberg.org/SOrg/Doggo</url>
   <categories>
     <category>Game</category>
