--- a/data/doggo.gresource.xml.in
+++ b/data/doggo.gresource.xml.in
@@ -9,7 +9,6 @@
     <file alias="icons/dog.svg" preprocess="xml-stripblanks">ui/icons/dog.svg</file>
     <file alias="icons/dog-neutral.svg" preprocess="xml-stripblanks">ui/icons/dog-neutral.svg</file>
     <file alias="icons/dog-sleep.svg" preprocess="xml-stripblanks">ui/icons/dog-sleep.svg</file>
-    <file alias="icons/dog-sleep-png.png">ui/icons/dog-sleep.png</file>
     <file alias="icons/dog-affectionate.svg" preprocess="xml-stripblanks">ui/icons/dog-affectionate.svg</file>
     <file alias="icons/dog-angry.svg" preprocess="xml-stripblanks">ui/icons/dog-angry.svg</file>
     <file alias="icons/dog-scared.svg" preprocess="xml-stripblanks">ui/icons/dog-scared.svg</file>
@@ -19,5 +18,6 @@
     <file alias="icons/food-sausage.svg" preprocess="xml-stripblanks">ui/icons/food-sausage.svg</file>
     <file alias="icons/ghost.svg" preprocess="xml-stripblanks">ui/icons/ghost.svg</file>
     <file alias="icons/arrow-left.svg" preprocess="xml-stripblanks">ui/icons/arrow-left.svg</file>
+    <file alias="icons/hand-touch-symbolic.svg" preprocess="xml-stripblanks">ui/icons/hand-touch-symbolic.svg</file>
   </gresource>
 </gresources>
