--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -7,6 +7,7 @@ steps:
       branch: main
       event: [push, pull_request, tag]
     commands:
+      - flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
       - flatpak install --user -y org.flatpak.Builder
       - ls -la
       - flatpak run org.flatpak.Builder --user --install-deps-from=flathub --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
