--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -2,6 +2,7 @@
 steps:
   build:
     image: registry.fedoraproject.org/fedora:latest
+    options: --privileged
     secrets: [access_token]
     when:
       branch: main
@@ -9,7 +10,6 @@ steps:
     commands:
       - dnf install -y flatpak dbus-daemon
       - chmod u+s /usr/bin/bwrap
-      - echo 15385 > /proc/sys/user/max_user_namespaces
       - mkdir /run/dbus
       - dbus-daemon --system
       - flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
