--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,13 +8,9 @@ steps:
       branch: main
       event: [push, pull_request, tag]
     commands:
-      - dnf install -y flatpak dbus-daemon
-      - chmod u+s /usr/bin/bwrap
-      - mkdir /run/dbus
-      - dbus-daemon --system
-      - flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-      - flatpak install --user -y org.flatpak.Builder
+      - dnf install -y flatpak flatpak-builder
+      - flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
       - ls -la
-      - flatpak run org.flatpak.Builder --user --install-deps-from=flathub --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
+      - flatpak-builder --install-deps-from=flathub --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
       - flatpak build-bundle build-repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
       - curl --user $CI_REPO_OWNER:$ACCESS_TOKEN --upload-file page.codeberg.SOrg.DogGTK.Devel.flatpak https://codeberg.org/api/packages/$CI_REPO/test_package/nightly/page.codeberg.SOrg.DogGTK.Devel.flatpak
