--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -10,7 +10,8 @@ steps:
     commands:
       - dnf install -y flatpak flatpak-builder
       - flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+      - flatpak remote-add --if-not-exists gnome-nightly https://nightly.gnome.org/gnome-nightly.flatpakrepo
       - ls -la
-      - flatpak-builder --install-deps-from=flathub --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
+      - flatpak-builder --install-deps-from=gnome-nightly --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
       - flatpak build-bundle build-repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
       - curl --user $CI_REPO_OWNER:$ACCESS_TOKEN --upload-file page.codeberg.SOrg.DogGTK.Devel.flatpak https://codeberg.org/api/packages/$CI_REPO/test_package/nightly/page.codeberg.SOrg.DogGTK.Devel.flatpak
